--- a/src/product-table-component/component.sass
+++ b/src/product-table-component/component.sass
@@ -1,34 +1,57 @@
 .product-table
-  width: 100%
-  max-width: 1000px
-  padding: 0 20%
-  
+  margin-top: 3rem
+  overflow-x: hidden
+
+  .text-col
+    width: 12rem
+
+  .select-col
+    width: 10rem
+
+  .dirty-col
+    width: 1rem
+
+.product-table__error
+  background: #faf9fa
+  border: 1px solid #dad8de
+  border-left-width: 0.2rem
+  border-left-color: #fc3636
+  padding: 1rem
+  margin-bottom: 1rem
+
+  *
+    margin: 0
+    padding: 0
+    box-sizing: border-box
+    line-height: 2rem
+
+  h4
+    font-weight: 600
+    font-size: 1.2rem
+
 .product-table__header
   display: flex
   justify-content: space-between
   align-items: center
-  margin-bottom: 3px
-
-  *
-    padding-left: 3px
-
-  .text
-    width: 195.5px
-
-  .select
-    width: 162px
+  margin-bottom: 0.8rem
+  font-family: HelveticaNeue-Medium
 
 .product-table__row
   display: flex
   justify-content: space-between
   align-items: center
-  margin-top: 10px
+  margin-top: 0.5rem
+  font-family: HelveticaNeue
+
+  .dirty-indicator
+    height: 1rem
+    fill: #6441a4
   
-  select.form__input, .form__input[type='text'], .form__input[type='number']
+  .form__input
     box-shadow: inset 0 0 0 1px #dad8de, 0 0 0 transparent
     background-color: white
     color: #433f4a
-    width: 175.5px
+    width: 80%
     height: 20px
     padding: 5px 10px
     border: none
@@ -41,7 +64,7 @@
 
 
   select.form__input
-    width: 162px
+    width: 90%
     height: 30px
     cursor: pointer
     background-image: url("data:image/svg+xml,%3Csvg%20viewBox%3D%220%200%2012%2012%22%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20fill%3D%22%23898395%22%3E%3Cpolygon%20points%3D%226%2C1%2010%2C5%202%2C5%22/%3E%20%3Cpolygon%20points%3D%226%2C11%2010%2C7%202%2C7%22/%3E%3C/svg%3E")
@@ -49,18 +72,39 @@
     background-position: right 10px center
     background-size: 14px
 
-.add-product-btn
-  background: #6441a4
-  color: white
-  display: inline-block
-  position: relative
-  float: right
-  width: 103px
-  margin-top: 20px
-  padding: 0 1rem
-  transition: background 0.12s ease-in, color 0.12s ease-in, box-shadow 0.12s ease-in
-  font-size: 12px
-  font-weight: 400
-  line-height: 2rem
-  white-space: nowrap
-  cursor: pointer
+.product-table__buttons
+  display: flex
+  justify-content: flex-end
+  align-items: center
+  margin-top: 1.3rem
+  padding-right: 2rem
+
+  button
+    border: none
+    display: inline-block
+    position: relative
+    width: 103px
+    margin-left: 1rem
+    padding: 0 1rem
+    transition: background 0.12s ease-in, color 0.12s ease-in, box-shadow 0.12s ease-in
+    font-size: 12px
+    font-weight: 400
+    line-height: 2rem
+    white-space: nowrap
+    cursor: pointer
+  
+  .product-table__add-button
+    background: #6441a4
+    color: white
+
+    &:hover
+      background: #7d5bbe
+
+  .product-table__save-button
+    background: transparent
+    color: #6441a4
+    box-shadow: inset 0 0 0 1px #b19dd8
+
+    &:hover
+      background: rgba(100, 65, 164, 0.05)
+      color: #2c2541
